--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="section-body section-body-weather-app">
                 <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-weather-app">  
-                    This is a Weather app I created using JavaScript, HTML5, and CSS3. 
+                    This is a Weather App I created using JavaScript, HTML5, and CSS3. 
                     My goal was to develop a user-friendly application that provides up-to-date weather information based on user input. 
                     Simply enter a location, and the app fetches and displays the current weather conditions, 
                     making it easy to stay informed about the weather wherever you are.
