--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     making it easy to stay informed about the weather wherever you are.
                     The app utilizes JavaScript to retrieve weather data from an API,
                     presenting it in a clean and intuitive format. The interface, designed with HTML5 and CSS3, 
-                    is both responsive and visually appealing, ensuring a consistent experience across various devices and screen sizes. 
+                    is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes. 
                 </p>
                 <img class="weather-app-background" src="#" alt="background picture for ">
                 <div class="project-links project-links-weather-app">
