--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <div class="section-body section-body-threads-app">
                 <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-threads-app">
-                    This is a Threads clone app I developed using TypeScript and Next.js. 
+                    This is a Threads clone app I developed using <b>TypeScript</b> and <b>Next.js</b>. 
                     I wanted to create a platform that mirrors the core features of a modern social media site, 
                     focusing on thread creation and user interaction. The app allows users to create threads, manage their profiles,
                     and see real-time updates, making the experience dynamic and engaging.
-                    For the backend, I chose MongoDB to ensure robust and scalable data storage. 
+                    For the backend, I chose <b>MongoDB</b> to ensure robust and scalable data storage. 
                     Security was a top priority, so I implemented secure user authentication to keep user data safe. 
                     The interface, built with Next.js, leverages server-side rendering for efficient data fetching and smooth real-time updates.
                     The goal was to create an app that feels fully responsive, providing a great user experience from front to back.
@@ -132,7 +132,7 @@
             <div class="section-body section-body-weather-app">
                 <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-weather-app">  
-                    This is a Weather App I created using JavaScript, HTML5, and CSS3. 
+                    This is a Weather App I created using <b>JavaScript</b>, <b>HTML5</b>, and <b>CSS3</b>. 
                     My goal was to develop a user-friendly application that provides up-to-date weather information based on user input. 
                     Simply enter a location, and the app fetches and displays the current weather conditions, 
                     making it easy to stay informed about the weather wherever you are.
