--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="section-about-me" id="about-me">
             <h2 class="section-title section-title-about-me">About Me</h2>
             <div class="section-body section-body-about-me">
-                <img class="section-about-me-img" src="./img/2.JPG" alt="">
+                <img class="section-about-me-img" src="./img/2.jpg" alt="">
                 <p class="section-description section-description-about-me">
                     My name is Arkar Moe Myint, and I am an incoming junior from 
                     University of Massachusetts Amherst, majoring in computer science. Originally, 
