add video links

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2 class="section-title section-title-threads-app">Threads App</h2>
             <h3 class="section-subtitle section-subtitle-threads-app">Project 1 (Independent Project)</h3>
             <div class="section-body section-body-threads-app">
-                <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                <iframe class="section-video" width="560" height="315" src="https://www.youtube.com/embed/ZcE6nOmNzP8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-threads-app">
                     This is a Threads clone app I developed using <b>TypeScript</b> and <b>Next.js</b>. 
                     I wanted to create a platform that mirrors the core features of a modern social media site, 
@@ -130,7 +130,7 @@
             <h2 class="section-title section-title-weather-app">Weather App</h2>
             <h3 class="section-subtitle section-subtitle-weather-app">Project 3 (Independent Project)</h3>
             <div class="section-body section-body-weather-app">
-                <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                <iframe class="section-video" width="560" height="315" src="https://www.youtube.com/embed/Z7LK0J7dTsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-weather-app">  
                     This is a Weather App I created using <b>JavaScript</b>, <b>HTML5</b>, and <b>CSS3</b>. 
                     My goal was to develop a user-friendly application that provides up-to-date weather information based on user input. 
