--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h2 class="section-title section-title-tic-tac-toe-game">Tic-Tac-Toe Game</h2>
             <h3 class="section-subtitle section-subtitle-tic-tac-toe-game">Project 2 (Independent Project)</h3>
             <div class="section-body section-body-tic-tac-toe-game">
-                <iframe class="section-video" width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
+                <iframe class="section-video" width="560" height="315" src="https://www.youtube.com/embed/dHzIr5z0Uvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-tic-tac-toe-game">
                     This is a Tic-Tac-Toe game I coded using <b>Python</b>. I already knew the concept behind the game and wanted to create a program
                     that had a good user interface and a bot that would be hard to beat. You can play against three types of opponents: another player,
