fix css and html

--- a/index.html
+++ b/index.html
@@ -87,17 +87,19 @@
                 <p class="section-project-description section-description-threads-app">
                     This is a Threads clone app I developed using <b>TypeScript</b> and <b>Next.js</b>. 
                     I wanted to create a platform that mirrors the core features of a modern social media site, 
-                    focusing on thread creation and user interaction. The app allows users to create threads, manage their profiles,
+                    focusing on thread creation and user interaction. This app allows users to create threads, manage their profiles,
                     and see real-time updates, making the experience dynamic and engaging.
-                    For the backend, I chose <b>MongoDB</b> to ensure robust and scalable data storage. 
-                    Security was a top priority, so I implemented secure user authentication to keep user data safe. 
+                    For the backend, I used <b>MongoDB</b> to implement robust and scalable data storage. 
+                    Security was a top priority, so I implemented secure user authentication using <a href="https://clerk.com" target="_blank">Clerk</a> to keep user data safe. 
                     The interface, built with Next.js, leverages server-side rendering for efficient data fetching and smooth real-time updates.
-                    The goal was to create an app that feels fully responsive, providing a great user experience from front to back.
+                    The goal was to create a modern, fullstack web application that feels fully responsive, providing a great user experience from front to back 
+                    so it was deployed on <a href="https://vercel.com" target="_blank">Vercel</a> for a reliable performance.
+                    A demo version of this project is provide below. 
                 </p>
-                <img class="" src="#" alt="">
+                <img class="threads-app-background" src="#" alt="background picture for threads-app">
                 <div class="project-links project-links-threads-app">
-                    <a class="project-link-button left-button -github-link" target="_blank" href="https://github.com/arkthekid/threads">Github</a>
-                    <a class="project-link-button right-button -demo-link" target="_blank" href="https://threads-jade-mu.vercel.app/sign-up">Demo</a>
+                    <a class="project-link-button left-button threads-app-github-link" target="_blank" href="https://github.com/arkthekid/threads">Github</a>
+                    <a class="project-link-button right-button threads-app-demo-link" target="_blank" href="https://threads-jade-mu.vercel.app/sign-up">Demo</a>
                 </div>
             </div>
         </section>
@@ -114,7 +116,7 @@
                     an easy bot, and a hard bot. Playing with another player is just taking your input again. The easy bot randomizes its moves.
                     The hard bot uses the minimax algorithm to find the best possible move. This algorithm is a recursive algorithm that simulates every
                     possible move. On the bot's turn, it picks the move with the highest score, and on your simulated turn, it picks the move with the lowest
-                    score. The user interface was built using <a href="https://pypi.org/project/PyQt5/" target="_blank">PyQt5</a>. An executable file for linux made with 
+                    score. The user interface was built using <a href="https://pypi.org/project/PyQt5/" target="_blank">PyQt5</a>. An executable file for MacOS made with 
                     <a href="https://pyinstaller.org/en/stable/" target="_blank">PyInstaller</a> can be downloaded below.
                 </p>
                 <img class="tic-tac-toe-game-background" src="#" alt="background picture for tic-tac-toe-game">
@@ -134,15 +136,17 @@
                 <p class="section-project-description section-description-weather-app">  
                     This is a Weather App I created using <b>JavaScript</b>, <b>HTML5</b>, and <b>CSS3</b>. 
                     My goal was to develop a user-friendly application that provides up-to-date weather information based on user input. 
-                    Simply enter a location, and the app fetches and displays the current weather conditions, 
+                    The app fetches and displays the current weather conditions after the user input, 
                     making it easy to stay informed about the weather wherever you are.
-                    The app utilizes JavaScript to retrieve weather data from an API,
-                    presenting it in a clean and intuitive format. The interface, designed with HTML5 and CSS3, 
-                    is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes. 
+                    It also utilizes JavaScript to retrieve weather data from <a href="https://openweathermap.org/" target="_blank">OpenWeather</a> API,
+                    presenting it in a clean and intuitive format. The interface that was designed with HTML5 and CSS3, 
+                    is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes.
+                    A demo version of this project is provide below.  
                 </p>
                 <img class="weather-app-background" src="#" alt="background picture for ">
                 <div class="project-links project-links-weather-app">
                     <a class="project-link-button left-button weather-app-github-link" target="_blank" href="https://github.com/arkthekid/weather-app">Github</a>
+                    <a class="project-link-button right-button weather-app-demo-link" target="_blank" href="https://arkthekid.github.io/weather-app/">Demo</a>
                 </div>
             </div>
         </section>
