--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes.
                     A demo version of this project is provide below.  
                 </p>
-                <img class="weather-app-background" src="#" alt="background picture for ">
+                <img class="weather-app-background" src="#" alt="background picture for weather-app">
                 <div class="project-links project-links-weather-app">
                     <a class="project-link-button left-button weather-app-github-link" target="_blank" href="https://github.com/arkthekid/weather-app">Github</a>
                     <a class="project-link-button right-button weather-app-demo-link" target="_blank" href="https://arkthekid.github.io/weather-app/">Demo</a>
