--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                     The interface, built with Next.js, leverages server-side rendering for efficient data fetching and smooth real-time updates.
                     The goal was to create a modern, fullstack web application that feels fully responsive, providing a great user experience from front to back 
                     so it was deployed on <a href="https://vercel.com" target="_blank">Vercel</a> for a reliable performance.
-                    A demo version of this project is provide below. 
+                    A demo version of this project is provided below. 
                 </p>
-                <img class="threads-app-background" src="#" alt="background picture for threads-app">
+                <!-- <img class="threads-app-background" src="#" alt="background picture for threads-app"> --> 
                 <div class="project-links project-links-threads-app">
                     <a class="project-link-button left-button threads-app-github-link" target="_blank" href="https://github.com/arkthekid/threads">Github</a>
                     <a class="project-link-button right-button threads-app-demo-link" target="_blank" href="https://threads-jade-mu.vercel.app/sign-up">Demo</a>
@@ -119,7 +119,7 @@
                     score. The user interface was built using <a href="https://pypi.org/project/PyQt5/" target="_blank">PyQt5</a>. An executable file for MacOS made with 
                     <a href="https://pyinstaller.org/en/stable/" target="_blank">PyInstaller</a> can be downloaded below.
                 </p>
-                <img class="tic-tac-toe-game-background" src="#" alt="background picture for tic-tac-toe-game">
+                <!-- <img class="tic-tac-toe-game-background" src="#" alt="background picture for tic-tac-toe-game"> -->
                 <div class="project-links project-links-tic-tac-toe-game">
                     <a class="project-link-button left-button tic-tac-toe-game-github-link" target="_blank" href="https://github.com/arkthekid/tic-tac-toe">Github</a> <!--link to github repo-->
                     <a class="project-link-button right-button tic-tac-toe-game-demo-link" target="_blank" href="https://drive.google.com/file/d/1k6VYXH30cKgtOcAeZPeYH_e6dVeO1CUn/view?usp=share_link">Demo (Linux/MacOS)</a>
@@ -141,9 +141,9 @@
                     It also utilizes JavaScript to retrieve weather data from <a href="https://openweathermap.org/" target="_blank">OpenWeather</a> API,
                     presenting it in a clean and intuitive format. The interface that was designed with HTML5 and CSS3, 
                     is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes.
-                    A demo version of this project is provide below.  
+                    A demo version of this project is provided below.  
                 </p>
-                <img class="weather-app-background" src="#" alt="background picture for weather-app">
+                <!-- <img class="weather-app-background" src="#" alt="background picture for weather-app"> -->
                 <div class="project-links project-links-weather-app">
                     <a class="project-link-button left-button weather-app-github-link" target="_blank" href="https://github.com/arkthekid/weather-app">Github</a>
                     <a class="project-link-button right-button weather-app-demo-link" target="_blank" href="https://arkthekid.github.io/weather-app/">Demo</a>
