--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img class="section-about-me-img" src="./img/2.jpg" alt="">
                 <p class="section-description section-description-about-me">
                     My name is Arkar Moe Myint, and I am an incoming junior from 
-                    University of Massachusetts Amherst, majoring in computer science. Originally, 
+                    University of Massachusetts Amherst, majoring in Computer Science. Originally, 
                     I am from Yangon, Myanmar which is where I grew up before coming to Amherst.
                     My hobbies include soccer, music, and film. I aspire to be a software engineer, 
                     with a focus on backend engineering.
