update some files

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 <iframe class="section-video" width="560" height="315" src="https://www.youtube.com/embed/ZcE6nOmNzP8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-threads-app">
                     This is a Threads clone app I developed using <b>TypeScript</b> and <b>Next.js</b>. 
-                    I wanted to create a platform that mirrors the core features of a modern social media site, 
-                    focusing on thread creation and user interaction. This app allows users to create threads, manage their profiles,
-                    and see real-time updates, making the experience dynamic and engaging.
-                    For the backend, I used <b>MongoDB</b> to implement robust and scalable data storage. 
-                    Security was a top priority, so I implemented secure user authentication using <a href="https://clerk.com" target="_blank">Clerk</a> to keep user data safe. 
-                    The interface, built with Next.js, leverages server-side rendering for efficient data fetching and smooth real-time updates.
-                    The goal was to create a modern, fullstack web application that feels fully responsive, providing a great user experience from front to back 
-                    so it was deployed on <a href="https://vercel.com" target="_blank">Vercel</a> for a reliable performance.
+                    My idea was to create a platform that mirrors the core features of a modern social media site that
+                    focuses on thread creations and user interactions, managing their profiles,
+                    and see the real-time updates, making each users' experience dynamic and engaging.
+                    For the backend, I used <b>MongoDB</b> to implement a reliable data storage for everyone. 
+                    Then, I believe security was a top priority, so I implemented secure user authentication using <a href="https://clerk.com" target="_blank">Clerk</a> to keep user data safe. 
+                    The interface, built with Next.js that handles the server-side rendering for efficient data fetching and efficient real-time updates.
+                    I believe I could provide a fully responsive front to back modern web application in the end
+                    so <a href="https://vercel.com" target="_blank">Vercel</a> was used for the deployment which also provides a reliable performance to the users.
                     A demo version of this project is provided below. 
                 </p>
                 <!-- <img class="threads-app-background" src="#" alt="background picture for threads-app"> --> 
@@ -135,12 +135,12 @@
                 <iframe class="section-video" width="560" height="315" src="https://www.youtube.com/embed/Z7LK0J7dTsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
                 <p class="section-project-description section-description-weather-app">  
                     This is a Weather App I created using <b>JavaScript</b>, <b>HTML5</b>, and <b>CSS3</b>. 
-                    My goal was to develop a user-friendly application that provides up-to-date weather information based on user input. 
-                    The app fetches and displays the current weather conditions after the user input, 
-                    making it easy to stay informed about the weather wherever you are.
-                    It also utilizes JavaScript to retrieve weather data from <a href="https://openweathermap.org/" target="_blank">OpenWeather</a> API,
-                    presenting it in a clean and intuitive format. The interface that was designed with HTML5 and CSS3, 
-                    is both responsive and visually appealing, providing a consistent experience across various devices and screen sizes.
+                    My goal of this small project was to develop a user-friendly application that provides up-to-date weather information based on user input one at a time. 
+                    Therefore, the app fetches and displays the current weather conditions after the user input, 
+                    making it easy to stay informed about the weather no matter where you are.
+                    It utilizes JavaScript to retrieve weather data from <a href="https://openweathermap.org/" target="_blank">OpenWeather</a> API,
+                    presenting it in a clean and intuitive format. Then the interface that was designed with HTML5 and CSS3, 
+                    to create a both responsive and visually appealing environment or experience across various devices and screen sizes for the users.
                     A demo version of this project is provided below.  
                 </p>
                 <!-- <img class="weather-app-background" src="#" alt="background picture for weather-app"> -->
