--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </li>
                 <li class="work-list-item-intro">
-                    <a class="work-list-item-intro intro-resume" href="./files/Resume - Arkar Myint.pdf" target="_blank">
+                    <a class="work-list-item-intro intro-resume" href="./files/Resume.pdf" target="_blank">
                         <i class="fa-solid fa-file-lines"></i> 
                         <p class="work-list-item-subtitle">Resume</p>
                     </a>
